# advent-of-code-2023

./: .gitignore  README.md  go.mod
day1/: main.go
day10/: main.go
day11/: main.go
day12/: main.go
day13/: main.go
day14/: main.go
day15/: main.go
day16/: main.go
day17/: main.go
day18/: main.go
day19/: main.go
day2/: main.go
day20/: main.go  main_test.go  part2.txt  todot.py
day21/: main.go
day22/: main.go
day23/: main.go
day24/: main.go
day24/pysolve/: README.md  main.py  pyproject.toml
day25/: README.md  main.go
day3/: main.go
day4/: main.go
day5/: main.go
day6/: main.go
day7/: main.go
day8/: main.go
day9/: main.go
